# TODO
# - devNNN version suffix?
# - Declare wheels as platform specific, currently nameed as though pure Python
# - cross-build wheels for other platforms/ISAs (`-C=--build-option=...`
#   doeesn't appear to do it)
# - Delete setuptools plumbing
# - Change workflow to match

[build-system]
requires = [
    "hatchling",
    "hatch-build-scripts",
]
build-backend = "hatchling.build"

[project]
name = "wasmtime"
version = "33.0.0"
description = "A WebAssembly runtime powered by Wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
authors = [
    {name="The Wasmtime Project Developers", email="hello@bytecodealliance.org"},
]

requires-python='>=3.9'
dependencies = [
    'importlib_resources>=5.10',
]
classifiers=[
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Rust',
    'Topic :: Software Development :: Compilers',
    'Topic :: Software Development :: Interpreters',
]

[project.optional-dependencies]
testing = [
    'coverage',
    'pycparser',
    'pytest-mypy',
    'pytest',
    # componentize-py only support x86_64 builds on Windows
    # platform.machine() on Windows returns 'AMD64' for x86_64
    "componentize-py; platform_system != 'Windows' or platform_machine == 'AMD64'",
]

[project.urls]
"Homepacge" = "https://github.com/bytecodealliance/wasmtime-py"
"Bug Tracker" = "https://github.com/bytecodealliance/wasmtime-py/issues"
"Documentation" = "https://bytecodealliance.github.io/wasmtime-py/"
"Source Code" = "https://github.com/bytecodealliance/wasmtime-py"

[tool.hatch.build.targets.wheel]
artifacts = [
    # Downloaded by ci/download-wasmtime.py
    "wasmtime/*-*/*.dll",
    "wasmtime/*-*/*.dylib",
    "wasmtime/*-*/*.so",

    # Generated by ci/build-rust.py
    "wasmtime/bindgen/generated/*.py",
    "wasmtime/bindgen/generated/*.wasm",
    "wasmtime/bindgen/generated/imports/*.py",
]

[[tool.hatch.build.targets.wheel.hooks.build-scripts.scripts]]
commands = [
    "python ci/download-wasmtime.py",
]
artifacts = [
    "wasmtime/*-*/*.dll",
    "wasmtime/*-*/*.dylib",
    "wasmtime/*-*/*.so",
]

[[tool.hatch.build.targets.wheel.hooks.build-scripts.scripts]]
commands = [
    "python ci/build-rust.py",
]
artifacts = [
    "wasmtime/bindgen/generated/*.py",
    "wasmtime/bindgen/generated/*.wasm",
    "wasmtime/bindgen/generated/imports/*.py",
]
