[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning>=2.0,<3",
]
# Use an in-tree build backend, to customise the wheels we generate
build-backend = "backend"
backend-path = [
    "ci/_custom_build",
]

[project]
name = "wasmtime"
version = [
    "dynamic"
]

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true
dev_template = "{tag}.dev{ccount}"
